...
            "state" : "translated",
            "value" : "Radera konto"
          }
        }
      }
    },
    "Done" : {
      "comment" : "A label describing the action of saving changes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Passwort"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contraseña"
...
            "value" : "Passwort Zurücksetzten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restablecer Contraseña"
...
            "value" : "E-Mail Adresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-Mail Address"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección de Correo Electrónico"
...
            "value" : "Benutzername"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Username"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nombre de Usuario"
...
