...
            "value": "Chat exportieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Export the Chat"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Exportar el chat"
...
            "value": "Nachrichteneingabefeld"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message Input Textfield"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Campo de texto de entrada de mensaje"
...
            "value": "Nachricht senden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Enviar Mensaje"
...
            "value": "Schreibanzeige"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Typing Indicator"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Indicador de mecanografía"
...
