...
    
    /// Constructs the temporary file path for the exported chat file.
    ///
    /// - Parameters:
    ///    - sharedItemType: The shared item type, therefore defining the file extension.
    static func temporaryExportFilePath(sharedItemType: ChatExportFormat) -> URL {
        var temporaryPath = FileManager.default.temporaryDirectory.appendingPathComponent("Exported Chat")
        
        switch sharedItemType {
        case .json: temporaryPath = temporaryPath.appendingPathExtension("json")
        case .text: temporaryPath = temporaryPath.appendingPathExtension("txt")
        case .pdf: temporaryPath = temporaryPath.appendingPathExtension("pdf")
        }
...
